<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name"><b>NAV</b></string>
    
    <string name="nav_title">NAV</string>
    <string name="splash_description">Delivering New Age Valet Services</string>

    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    
    <string name="login_log">Log In</string>
    
    <string name="login_signup">Create Account</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    
    <string name="register_check_account"><i>Check Account</i></string>
    <string name="register_firstname"><i>First Name</i></string>
    <string name="register_lastname"><i>Last Name</i></string>
    <string name="register_phone"><i>Phone Number</i></string>
    <string name="register_password"><i>Password</i></string>
    <string name="register_againpassword"><i>Re-Enter Password</i></string>
    <string name="register_createaccount">Create Account</string>
    <string name="register_email"><i>Email</i></string>
    <string name="register_username"><i>Username</i></string>
    
    <string name="about_title">New Age Valet</string>
    <string name="about_description">Welcome to the New Age of Valet services!</string>
    <string name="about_feature_title">Implemented Features</string>
    <string name="about_features"><![CDATA[
		*Navigation drawer!\n*User can sign in or signup using Parse Services.\n
		*Log-out through the menu\n
		*Exit app on backpress\n
		*Viewpager with Pagerstrip Icons!\n
		*Actionbar has a "+" button to add new tickets!\n
		*All form fields have a label floater for the edittext box\'s hint\n
		*Inventory page displays all Tickets that were added (Adding a new ticket does not refresh the list automatically yet)\n
		*Staff page displays all online Users\n
		]]>
	</string>
    <string name="about_creators">Developers: Quan + Perry</string>
    <string name="ticket_serial">Serial Number</string>
    <string name="ticket_name">Name</string>
    <string name="ticket_model">Model</string>
    <string name="ticket_license">License Number</string>
    <string name="ticket_color">Color</string>
    <string name="ticket_park">Park Location</string>
    <string name="ticket_key">Key Location</string>
</resources>
