<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
   <LinearLayout 
        android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical"
		android:layout_margin="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_title" 
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/color_pomegranate"
        android:layout_gravity="center|top" />
    
    <View 
    	android:layout_width="200dp"
    	android:layout_height="0.1dp"
    	android:background="@color/color_pomegranate"
    	android:layout_gravity="center|top"/>
    
    <TextView
        android:id="@+id/tvAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_description" 
        android:textStyle="italic"
        android:layout_marginTop="10dp"
        android:textColor="@color/theme_bar"
        android:layout_gravity="center|top"/>
    
    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_feature_title" 
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/color_pomegranate"/>
    
    <TextView
        android:id="@+id/tvFeatureList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_features" 
        android:textStyle="italic"
        android:layout_marginTop="10dp"
        android:textSize="10sp"
        android:textColor="@color/theme_bar"/>

    <TextView
        android:id="@+id/tvCreators"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/about_creators"
        android:textColor="@color/color_pomegranate"
        android:textSize="10sp"
        android:textStyle="italic" />

    </LinearLayout>
	</ScrollView>
</LinearLayout>
