<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        android:src="@drawable/bridge" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edtPassword"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/edtPassword"
        android:layout_marginBottom="34dp"
        android:background="@drawable/theme_button"
        android:text="@string/login_signup"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSignUp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:background="@drawable/edittext_rounded_corners"
        android:ellipsize="start"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/login_password"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/edtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edtPassword"
        android:layout_alignLeft="@+id/edtPassword"
        android:layout_marginBottom="30dp"
        android:background="@drawable/edittext_rounded_corners"
        android:ellipsize="start"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/login_username"
        android:textStyle="italic" >
    	<requestFocus />
	</EditText>
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edtLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/nav_title"
        android:textColor="@color/white"
        android:textSize="52sp"
        android:textStyle="bold" />

</RelativeLayout>
