<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:flatui="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp">
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/ValetTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/hotpink_dark" 
        android:textSize="22dp"
        android:text="Info"
        android:textStyle="bold"/>
    
    
    <View 
        android:layout_width="fill_parent"
        android:layout_height="1.5dp"
        android:background="@color/hotpink_dark"
        />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    
    <com.hardik.floatinglabel.FloatingLabelView
        android:id="@+id/edtFirstName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        flatui:textColorf="@color/theme_bar"
        flatui:textBackground="@drawable/edittext_rounded_corners"
        flatui:floatHintText="@string/register_firstname"
        flatui:floatHintTextColorFocused="@color/theme_bar"
        flatui:floatHintTextColorUnFocused="@color/red"
        flatui:floatHintTextGravity="left"
        flatui:floatHintTextSize="8"
        flatui:textSize="18"/>   
        
<!--     <com.cengalabs.flatui.views.FlatEditText -->
<!--         android:id="@+id/edtFirstName" -->
<!--         android:layout_width="match_parent" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:layout_marginTop="10dp" -->
<!--         android:ems="10" -->
<!--         android:hint="@string/register_firstname" -->
<!--         android:singleLine="true" -->
<!--         flatui:theme="@array/hotpinket" -->
<!--     	flatui:textAppearance="dark" -->
<!--     	flatui:fontFamily="roboto" -->
<!--     	flatui:fontWeight="light" -->
<!--     	flatui:fontExtension="ttf" -->
<!--     	flatui:borderWidth="0.5dp" -->
<!--     	flatui:cornerRadius="5dp" -->
<!--     	flatui:fieldStyle="box"> -->

<!--         <requestFocus /> -->
<!--     </com.cengalabs.flatui.views.FlatEditText> -->
    
    <com.hardik.floatinglabel.FloatingLabelView
        android:id="@+id/edtLastName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        flatui:textColorf="@color/theme_bar"
        flatui:textBackground="@drawable/edittext_rounded_corners"
        flatui:floatHintText="@string/register_lastname"
        flatui:floatHintTextColorFocused="@color/theme_bar"
        flatui:floatHintTextColorUnFocused="@color/red"
        flatui:floatHintTextGravity="left"
        flatui:floatHintTextSize="8"
        flatui:textSize="18"/>
    
    <com.hardik.floatinglabel.FloatingLabelView
        android:id="@+id/edtPhone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        flatui:textColorf="@color/theme_bar"
        flatui:textBackground="@drawable/edittext_rounded_corners"
        flatui:floatHintText="@string/register_phone"
        flatui:floatHintTextColorFocused="@color/theme_bar"
        flatui:floatHintTextColorUnFocused="@color/red"
        flatui:floatHintTextGravity="left"
        flatui:floatHintTextSize="8"
        flatui:textSize="18"/>

    <com.hardik.floatinglabel.FloatingLabelView
        android:id="@+id/edtEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        flatui:textColorf="@color/theme_bar"
        flatui:textBackground="@drawable/edittext_rounded_corners"
        flatui:floatHintText="@string/register_email"
        flatui:floatHintTextColorFocused="@color/theme_bar"
        flatui:floatHintTextColorUnFocused="@color/red"
        flatui:floatHintTextGravity="left"
        flatui:floatHintTextSize="8"
        flatui:textSize="18"/>
    
    <TextView
        android:id="@+id/passwords"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/hotpink_dark" 
        android:textSize="22dp"
        android:text="Key"
        android:textStyle="bold"/>
    
    <View 
        android:layout_width="fill_parent"
        android:layout_height="1.5dp"
        android:background="@color/hotpink_dark"
        />
    
    <com.hardik.floatinglabel.FloatingLabelView
        android:id="@+id/edtUserName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        flatui:textColorf="@color/theme_bar"
        flatui:textBackground="@drawable/edittext_rounded_corners"
        flatui:floatHintText="@string/register_username"
        flatui:floatHintTextColorFocused="@color/theme_bar"
        flatui:floatHintTextColorUnFocused="@color/red"
        flatui:floatHintTextGravity="left"
        flatui:floatHintTextSize="8"
        flatui:textSize="18"/>
    
    <com.hardik.floatinglabel.FloatingLabelView
        android:id="@+id/edtPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        flatui:textColorf="@color/theme_bar"
        flatui:textBackground="@drawable/edittext_rounded_corners"
        flatui:floatHintText="@string/register_password"
        flatui:floatHintTextColorFocused="@color/theme_bar"
        flatui:floatHintTextColorUnFocused="@color/red"
        flatui:floatHintTextGravity="left"
        flatui:floatHintTextSize="8"
        flatui:textSize="18"/>
    
    <com.hardik.floatinglabel.FloatingLabelView
        android:id="@+id/edtPasswordAgain"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        flatui:textColorf="@color/theme_bar"
        flatui:textBackground="@drawable/edittext_rounded_corners"
        flatui:floatHintText="@string/register_againpassword"
        flatui:floatHintTextColorFocused="@color/theme_bar"
        flatui:floatHintTextColorUnFocused="@color/red"
        flatui:floatHintTextGravity="left"
        flatui:floatHintTextSize="8"
        flatui:textSize="18"/>
    
    <View 
        android:layout_width="fill_parent"
        android:layout_height="1.5dp"
        android:background="@color/hotpink_dark"
        android:layout_marginTop="10dp"
        />
    
    <com.dd.processbutton.iml.ActionProcessButton
        android:id="@+id/btnCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/register_createaccount"
        android:textStyle="bold"
        android:textColor="@color/white"
	    flatui:pb_colorComplete="@color/green_complete"
	    flatui:pb_colorNormal="@color/theme_bar"
	    flatui:pb_colorProgress="@color/purple_progress"
	    flatui:pb_textComplete="Success"
	    flatui:pb_textProgress="Creating..."
	    flatui:pb_textError="Error"
	    flatui:pb_colorError="@color/red_error"
        />

    <TextView
        android:id="@+id/tvValidation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="10dp"
        android:textColor="#ff0000" />
	</LinearLayout>
	</LinearLayout>
</ScrollView>

