<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="22dp">
    
    <TextView
    android:id="@+id/ValetTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:text="New Valet Ticket"
    android:textColor="@color/color_pomegranate"
    android:textSize="22dp"
    android:textStyle="bold|italic" />
    
	<ScrollView 
    android:id="@+id/scrollbar"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fadeScrollbars="false">
    
	<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginRight="8dp"
    android:layout_marginLeft="12dp"
    android:layout_marginBottom="8dp">
    
    <!-- Info Section -->

    <TextView
        android:id="@+id/infoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Identity"
        android:textColor="@color/color_pomegranate"
        android:textSize="14dp"
        android:textStyle="bold|italic" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_pomegranate" />
    
    <com.hardik.floatinglabel.FloatingLabelView
       android:id="@+id/ticketserial"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="10dp"
       android:singleLine="true" 
       custom:textColorf="@color/theme_bar"
       custom:textBackground="@drawable/edittext_rounded_corners"
       custom:floatHintText="@string/ticket_serial"
       custom:floatHintTextColorFocused="@color/theme_bar"
       custom:floatHintTextColorUnFocused="@color/red"
       custom:floatHintTextGravity="left"
       custom:floatHintTextSize="6"
       custom:textSize="12"/>

    <com.hardik.floatinglabel.FloatingLabelView
       android:id="@+id/ticketname"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:singleLine="true" 
       custom:textColorf="@color/theme_bar"
       custom:textBackground="@drawable/edittext_rounded_corners"
       custom:floatHintText="@string/ticket_name"
       custom:floatHintTextColorFocused="@color/theme_bar"
       custom:floatHintTextColorUnFocused="@color/red"
       custom:floatHintTextGravity="left"
       custom:floatHintTextSize="6"
       custom:textSize="12"/>

    <!-- Date Section -->

    <TextView
        android:id="@+id/dateticket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Date In"
        android:textColor="@color/color_pomegranate"
        android:textSize="14dp"
        android:textStyle="bold|italic" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_pomegranate" />

    <TextView
        android:id="@+id/ticketdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:text="Date"
        android:textSize="12dp"
        android:textColor="@color/gray"/>

    <!-- Car Info Section -->

    <TextView
        android:id="@+id/carinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Car Info"
        android:textColor="@color/color_pomegranate"
        android:textSize="14dp"
        android:textStyle="bold|italic" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_pomegranate" />
        
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal">
		<RadioGroup 
		    android:id="@+id/carRadioGroup"
		    android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:orientation="horizontal">
	
		    <RadioButton
		        android:id="@+id/sedanradio"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:background="@drawable/sedan_radio_button"
		        android:button="@android:color/transparent"
		        />
		    <RadioButton
		        android:id="@+id/sportradio"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:background="@drawable/sportcar_radio_button"
		        android:button="@android:color/transparent"
		        />
		    <RadioButton
		        android:id="@+id/vanradio"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:background="@drawable/van_radio_button"
		        android:button="@android:color/transparent"
		        />
		    <RadioButton
		        android:id="@+id/truckradio"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:background="@drawable/truck_radio_button"
		        android:button="@android:color/transparent"
		        />
		    <RadioButton
		        android:id="@+id/bikeradio"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:background="@drawable/bike_radio_button"
		        android:button="@android:color/transparent"
		        />
      </RadioGroup>
    </LinearLayout>
    
    <com.hardik.floatinglabel.FloatingLabelView
        android:id="@+id/ticketmodel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true" 
        custom:textColorf="@color/theme_bar"
        custom:textBackground="@drawable/edittext_rounded_corners"
        custom:floatHintText="@string/ticket_model"
        custom:floatHintTextColorFocused="@color/theme_bar"
        custom:floatHintTextColorUnFocused="@color/red"
        custom:floatHintTextGravity="left"
        custom:floatHintTextSize="6"
        custom:textSize="12"/>
    
    <com.hardik.floatinglabel.FloatingLabelView
        android:id="@+id/ticketlicense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true" 
        custom:textColorf="@color/theme_bar"
        custom:textBackground="@drawable/edittext_rounded_corners"
        custom:floatHintText="@string/ticket_license"
        custom:floatHintTextColorFocused="@color/theme_bar"
        custom:floatHintTextColorUnFocused="@color/red"
        custom:floatHintTextGravity="left"
        custom:floatHintTextSize="6"
        custom:textSize="12"/>
        
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom">
        
        <ImageButton 
            android:id="@+id/colorwheel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ic_color"/>
        
        <com.hardik.floatinglabel.FloatingLabelView
            android:id="@+id/ticketcolor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:editable="false"
            android:focusable="false"
            android:hint="@string/ticket_color"
            android:singleLine="true"
            android:textColor="@color/gray"
            android:textSize="12dp" />
        
    </LinearLayout>

    <!-- Storage Info Section -->

    <TextView
        android:id="@+id/storageinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Storage Info"
        android:textColor="@color/color_pomegranate"
        android:textSize="14dp"
        android:textStyle="bold|italic" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_pomegranate" />
        
    <com.hardik.floatinglabel.FloatingLabelView
        android:id="@+id/ticketparklocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:singleLine="true" 
        custom:textColorf="@color/theme_bar"
        custom:textBackground="@drawable/edittext_rounded_corners"
        custom:floatHintText="@string/ticket_park"
        custom:floatHintTextColorFocused="@color/theme_bar"
        custom:floatHintTextColorUnFocused="@color/red"
        custom:floatHintTextGravity="left"
        custom:floatHintTextSize="6"
        custom:textSize="12"/>
    
    <com.hardik.floatinglabel.FloatingLabelView
        android:id="@+id/ticketkeylocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true" 
        custom:textColorf="@color/theme_bar"
        custom:textBackground="@drawable/edittext_rounded_corners"
        custom:floatHintText="@string/ticket_key"
        custom:floatHintTextColorFocused="@color/theme_bar"
        custom:floatHintTextColorUnFocused="@color/red"
        custom:floatHintTextGravity="left"
        custom:floatHintTextSize="6"
        custom:textSize="12" />
        
    <com.dd.processbutton.iml.ActionProcessButton 
	    android:id="@+id/ticketsubmit"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
	    android:layout_gravity="center"
	    android:text="Add Ticket"
	    android:textColor="@color/white"
	    android:textStyle="bold"
	    custom:pb_colorComplete="@color/green_complete"
	    custom:pb_colorNormal="@color/theme_bar"
	    custom:pb_colorProgress="@color/purple_progress"
	    custom:pb_textComplete="Success"
	    custom:pb_textProgress="Creating..."
	    custom:pb_textError="Error"
	    custom:pb_colorError="@color/red_error"/>
    
	</LinearLayout>
	</ScrollView>
	
</LinearLayout>